@@ -871,6 +871,8 @@ static SyscallTableEntry syscall_table[] = {
    LINXY(__NR_close_range, sys_close_range),                          // 436
 
    LINX_(__NR_faccessat2,  sys_faccessat2),                           // 439
+
+   LINXY(__NR_epoll_pwait2, sys_epoll_pwait2),                        // 441
 };
 
 SyscallTableEntry* ML_(get_linux_syscall_entry) ( UInt sysno )
